Learning to styling the layout
feat: learning to style the layout of the app
- Created a header and footer bar for the page
- Integrated navigation in the header bar
- added Tailwind CSS for styling

--- a/app/globals.css
+++ b/app/globals.css
@@ -1,4 +1,8 @@
 @import "tailwindcss";
+@tailwind utilities;
+@plugin "daisyui" {
+  themes: winter;
+}
 
 :root {
   --foreground-rgb: 0, 0, 0;
@@ -16,5 +20,4 @@
 
 body {
   color: rgb(var(--foreground-rgb));
-  padding: 1rem;
 }
